[project]
name = "examol"
version = "0.0.1"
authors = [
    { name = "Logan Ward", email = "lward@anl.gov" },
]
description = 'Designing molecules as fast as possible'
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["HPC", "AI", "Workflows", "Quantum Chemsitry", "Chemical Engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "colmena>=0.4",
    "ase>=3.22",
    "rdkit>=2022.9",
    "networkx>=2.8",
    "parsl>=2022.12",
    "scikit-learn==1.2.*",
    "more_itertools==9.*",
    "foundry_ml",
    "mongoengine>=0.27",
    "tensorflow>=2.7,<3",
    "tqdm"
]

[tool.setuptools.packages.find]
include = ['examol*']

[project.urls]
repository = "https://github.com/exalearn/examol"

[project.optional-dependencies]
test = [
    'flake8',
    'pytest',
    'pytest-timeout',
    'pytest-cov',
]

[project.scripts]
examol = "examol.cli:main"
