[project]
name = "examol"
version = "0.0.5"
authors = [
    { name = "Logan Ward", email = "lward@anl.gov" },
]
description = 'Designing molecules as fast as possible'
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["HPC", "AI", "Workflows", "Quantum Chemistry", "Chemical Engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "colmena==0.5.*",
    "ase>=3.22",
    "rdkit>=2022.9",
    "networkx>=2.8",
    "parsl>=2022.12",
    "more_itertools==9.*",
    "mongoengine>=0.27",
    "tabulate>=0.9",
    "modAL-python==0.4.*",
    "tqdm"
]

[tool.setuptools.packages.find]
include = ['examol*']

[project.urls]
repository = "https://github.com/exalearn/examol"

[project.optional-dependencies]
test = [
    'flake8',
    'pytest',
    'pytest-forked',
    'pytest-timeout',
    'pytest-cov',
    'pytest-skip-slow'
]
botorch = [
    'botorch==0.8.*'
]

[project.scripts]
examol = "examol.cli:main"
